2012-02-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bibtex.c (eoln): Accept both CR and LF as end-of-line.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (DISTCLEANFILES): Preserve distributed files.

2011-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* datatype.h (PdsType_T): Do not declare as unsigned.
	* bibtex-3.c (pre_define): Cast xord[] index to UChar_T.
	* utils.c (c8read_csf): Cast name_of_file to 'char *'.

2011-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c (setup_bound_variable): `program_invocation_name' has
	been renamed into `kpse_invocation_name'.

2010-05-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bibtex.h: fix a bug in the macro BIB_XRETALLOC_STRING.

2010-03-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bibtex*.[ch], gblvars.h, utils.c: Obtain Ent_Str_Size and
	Glob_Str_Size from environment or config file.
	Dynamically allocate global strings arrays, literal stack
	arrays, and single function space instances; reallocate them
	as required.

2010-03-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c: Default csfile and Max_Strings from env or config.
	* bibtex.c: Call kpse_set_program_name with "bibtex8".
	* bibtex.h (STR_ROOM): Call pool_overflow() as often as needed.
	* bibtex-3.c (scan_fn_def): Same for increase Wiz_Fn_Space.
	* bibtex-4.c (BST_STRING_SIZE_EXCEEDED): Drop extra "%ld".
	(x_text_prefix): Add missing STR_ROOM.

2010-03-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Dynamic allocation of name_of_file strings.  No padding.
	* bibtex-1.c (add_area): Not used and removed.
	* bibtex-2.c (file_nm_size_overflow): Not used and removed.
	* bibtex-3.c (s_bst_area, s_bib_area): Removed.
	* gblvars.h (bib_area_string, bst_area_string): Removed.
	* utils.c (open_ip_file, open_op_file): Adapted.
